# oculos

./: .gitmodules  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: release.yml
examples/: README.md  linkedin_easy_apply.py
orbit/: __init__.py  action.py  agents.py  daemon.py  journal.py  prompts.py  runner.py  session.py  verbs.py
orbit/_tools/: filesystem.py  hitl.py  hotkey.py  ui.py
orbit/_ui/: console.py  toast.py
src/platform/: linux.rs
