[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit"
version = "0.1.0"
description = "General computer-use agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Aadya" }]
keywords = ["computer-use", "agent", "automation", "desktop", "adk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "google-adk==1.25.0",
    "google-genai==1.64.0",
    "python-dotenv>=1.0.1",
    "pyautogui>=0.9.54",
    "pyperclip>=1.11.0",
    "requests>=2.32.5",
    "pdfplumber>=0.11.9",
    "send2trash>=2.1.0",
    "rich>=14.1.0",
    "duckduckgo-search>=8.1.1",
    "readability-lxml>=0.8.4.1",
    "beautifulsoup4>=4.14.2",
]

[project.urls]
Homepage = "https://github.com/aadya940/orbit"
Repository = "https://github.com/aadya940/orbit"
Issues = "https://github.com/aadya940/orbit/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["orbit*"]

[tool.setuptools.package-data]
orbit = ["_bin/*"]